# zappy

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  imgui.ini  note
AI/: notes  pyproject.toml  test  utils.py  zappy_ai  zappy_ai.py
AI/args_handling/: args_handling.py
AI/client/: client.py
AI/parser/concrete/: message_beacon_parser.py  message_birth_parser.py  message_ritual_parser.py  message_type_parser.py
AI/parser/virtual/: parser.py
AI/server_connection/: server_connection.py
AI/trentorian/: broadcast.py  commands.py  enums.py  map.py  trentorian.py
AI/zappy_ai/: __init__.py  zappy_ai.py
AI/zappy_ai/args_handling/: __init__.py
AI/zappy_ai/client/: client.py
AI/zappy_ai/parser/concrete/: __init__.py  message_beacon_parser.py  message_birth_parser.py  message_ritual_parser.py  message_type_parser.py
AI/zappy_ai/parser/virtual/: __init__.py  parser.py
AI/zappy_ai/trentorian/: __init__.py  broadcast.py  commands.py  ritual.py  trentorian.py
AI/zappy_ai/utils/: __init__.py  utils.py
GUI/: CMakeLists.txt  compile_flags.txt
GUI/include/: AnimData.hpp  Animation.hpp  Animator.hpp  App.hpp  Bone.hpp  Camera.hpp  CubeMappingPass.hpp  GBufferPass.hpp  GlUtils.hpp  LightingPass.hpp  Model.hpp  SSAOPass.hpp  SSRPass.hpp  ShaderProgram.hpp  SkeletalMesh.hpp  StaticMesh.hpp  Utils.hpp  Window.hpp
GUI/include/Models/: SkeletalMesh.hpp  SkeletalMeshImpl.hpp  StaticMesh.hpp
GUI/include/Models/Animations/: Animation.hpp  Animator.hpp
GUI/include/Network/: NetworkManager.hpp  ProtocolHandler.hpp
GUI/include/RenderPasses/: GBufferPass.hpp  LightingPass.hpp  SSAOPass.hpp  SSRPass.hpp
GUI/include/Renderer/: IRenderer.hpp  Renderer.hpp  ShaderProgram.hpp  Window.hpp
GUI/include/Renderer/GlRenderer/: Camera.hpp  GlRenderer.hpp  Window.hpp
GUI/include/Renderer/GlRenderer/RenderPasses/: GBufferPass.hpp  LightingPass.hpp  SSAOPass.hpp  SSRPass.hpp
GUI/shaders/: Background.frag  Background.vert  Cubemap.vert  EquiRectangularToCubemap.frag  GBuffer.frag  GBufferSkinned.frag  GBufferSkinned.vert  GBufferStatic.vert  Irradiance.frag  Lighting.frag  Lighting.vert  SSAO.frag  SSAOBlur.frag  SSR.frag  Shadow.frag  Shadow.vert  fragment.glsl  vertex.glsl
GUI/src/: Animation.cpp  Animator.cpp  App.cpp  Bone.cpp  Camera.cpp  GBufferPass.cpp  GlUtils.cpp  LightingPass.cpp  Model.cpp  Parsing.cpp  PlayerAnims.cpp  SSAOPass.cpp  SSRPass.cpp  ShaderProgram.cpp  SkeletalMesh.cpp  StaticMesh.cpp  Utils.cpp  Window.cpp  main.cpp
GUI/src/Models/: SkeletalMesh.cpp  SkeletalMeshImpl.cpp  StaticMesh.cpp
GUI/src/Models/Animations/: Animation.cpp  Animator.cpp  Bone.cpp
GUI/src/Network/: NetworkManager.cpp  ProtocolHandler.cpp  ProtocolManager.cpp
GUI/src/RenderPasses/: GBufferPass.cpp  LightingPass.cpp  SSAOPass.cpp  SSRPass.cpp
GUI/src/Renderer/: Camera.cpp  Renderer.cpp  ShaderProgram.cpp  Window.cpp
GUI/src/Renderer/GlRenderer/: GlRenderer.cpp
GUI/src/Renderer/GlRenderer/RenderPasses/: LightingPass.cpp  SSAOPass.cpp
GUI/src/Renderer/RenderPasses/: GBufferPass.cpp  SSRPass.cpp
assets/: .gitattributes  aircraft.mtl  broadcast.mtl  greyRock.gltf  greyRock.mtl  grid.mtl  pink.mtl  purple.mtl  tile.mtl  whiteRock.gltf  whiteRock.mtl
assets/Players/Dan/: scale.txt
assets/Players/Steve/: Birth.dae  Idle.dae  Move.dae  Ritual.dae  Steve.dae  scale.txt
assets/Ressources/: Gonstre.mtl  blue.gltf  blue.mtl  green.gltf  green.mtl  orange.gltf  orange.mtl  pink.gltf  purple.gltf  red.gltf  red.mtl
assets/egg/: license.txt  scene.gltf
bonus/: zappy_ref-2-0-2.tgz
bonus/nix/: flake.nix
server/: .clang-format  .clang-tidy  CMakeLists.txt
server/include/: arg_parse.h  array.h  buffer.h  error.h  incantation.h  server.h
server/src/: arg_parse.c  array.c  broadcast.c  free_array.c  incantations.c  look.c  main.c  map.c  my_str_to_word_array.c  server.c  waitlist.c
server/src/ai_clients/: ai_clients.c  ai_internal.h  commands.c  get_client_by_id.c  queue.c  write.c
server/src/ai_clients/commmands/: broadcast.c  commands.h  connect_nbr.c  eject.c  fork.c  forward.c  get.c  incantation.c  inventory.c  left.c  look.c  right.c  set.c  take.c
server/src/buffer/: buffer.c  buffer_internal.h  select.c  write.c
server/src/gui_protocols/: commands.c  gui_internal.h  write.c
server/src/gui_protocols/commands/: commands.h  gui_cmd_bct.c  gui_cmd_ebo.c  gui_cmd_edi.c  gui_cmd_enw.c  gui_cmd_mct.c  gui_cmd_msz.c  gui_cmd_pbc.c  gui_cmd_pdi.c  gui_cmd_pdr.c  gui_cmd_pex.c  gui_cmd_pfk.c  gui_cmd_pgt.c  gui_cmd_pic.c  gui_cmd_pie.c  gui_cmd_pin.c  gui_cmd_plv.c  gui_cmd_pnw.c  gui_cmd_ppo.c  gui_cmd_sbp.c  gui_cmd_seg.c  gui_cmd_sgt.c  gui_cmd_smg.c  gui_cmd_sst.c  gui_cmd_suc.c  gui_cmd_tna.c
server/tests/: .gitignore  Makefile  afl_wrapper.c
server/tests/input/: commands.txt
