[project]
name = "zappy_ai"
requires-python = ">= 3.8"
version = "0.1.0"

[project.scripts]
zappy_ai = "zappy_ai:main_cli"

[tool.setuptools]
packages = [
    "zappy_ai",
    "zappy_ai.args_handling",
    "zappy_ai.client",
    "zappy_ai.parser",
    "zappy_ai.parser.concrete",
    "zappy_ai.parser.virtual",
    "zappy_ai.trentorian",
    "zappy_ai.utils",
]
